<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:id="@+id/aboveline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDark"
        ></View>
    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/aboveline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        />
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/login"
        app:layout_constraintTop_toTopOf="@+id/login"/>

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        />
    <TextView
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/id"
        app:layout_constraintTop_toTopOf="@+id/id"/>

    <TextView
        android:id="@+id/node_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/node_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id"/>
    <TextView
        android:id="@+id/node_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/node_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/node_id"
        app:layout_constraintTop_toTopOf="@+id/node_id"/>

    <TextView
        android:id="@+id/gravatar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravatar_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/node_id"/>
    <TextView
        android:id="@+id/gravatar_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/gravatar_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/gravatar_id"
        app:layout_constraintTop_toTopOf="@+id/gravatar_id"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintTop_toBottomOf="@+id/gravatar_id"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/type"
        app:layout_constraintTop_toTopOf="@+id/type"/>
    <TextView
        android:id="@+id/site_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_admin"
        app:layout_constraintTop_toBottomOf="@+id/type"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/site_admin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/site_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/site_admin"
        app:layout_constraintTop_toTopOf="@+id/site_admin"/>
    <TextView
        android:id="@+id/contributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contributions"
        app:layout_constraintTop_toBottomOf="@+id/site_admin"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/contributions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/contributions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/contributions"
        app:layout_constraintTop_toTopOf="@+id/contributions"/>
    <TextView
        android:id="@+id/url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/url_button"
        app:layout_constraintBottom_toBottomOf="@+id/url_button"
        app:layout_constraintEnd_toStartOf="@+id/url_button"
        app:layout_constraintHorizontal_weight="3"

        />
    <Button
        android:id="@+id/url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/contributions"
        app:layout_constraintStart_toEndOf="@+id/url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <TextView
        android:id="@+id/html_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/html_url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/html_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/html_url_button"
        app:layout_constraintEnd_toStartOf="@+id/html_url_button"
        app:layout_constraintHorizontal_weight="3"
        />
    <Button
        android:id="@+id/html_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/url_button"
        app:layout_constraintStart_toEndOf="@+id/html_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />
    <TextView
        android:id="@+id/followers_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/followers_url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/followers_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/followers_url_button"
        app:layout_constraintEnd_toStartOf="@+id/followers_url_button"
        app:layout_constraintHorizontal_weight="3"
        />
    <Button
        android:id="@+id/followers_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/html_url_button"
        app:layout_constraintStart_toEndOf="@+id/followers_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <TextView
        android:id="@+id/following_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/following_url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/following_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/following_url_button"
        app:layout_constraintEnd_toStartOf="@+id/following_url_button"
        app:layout_constraintHorizontal_weight="3"

        />
    <Button
        android:id="@+id/following_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/followers_url_button"
        app:layout_constraintStart_toEndOf="@+id/followers_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <TextView
        android:id="@+id/gists_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gists_url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gists_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/gists_url_button"
        app:layout_constraintEnd_toStartOf="@+id/gists_url_button"
        app:layout_constraintHorizontal_weight="3"

        />
    <Button
        android:id="@+id/gists_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/following_url_button"
        app:layout_constraintStart_toEndOf="@+id/gists_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <TextView
        android:id="@+id/starred_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/starred_url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/starred_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/starred_url_button"
        app:layout_constraintEnd_toStartOf="@+id/starred_url_button"
        app:layout_constraintHorizontal_weight="3"

        />
    <Button
        android:id="@+id/starred_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/gists_url_button"
        app:layout_constraintStart_toEndOf="@+id/starred_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <TextView
        android:id="@+id/subscriptions_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subscriptions_url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/subscriptions_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/subscriptions_url_button"
        app:layout_constraintEnd_toStartOf="@+id/subscriptions_url_button"
        app:layout_constraintHorizontal_weight="3"

        />
    <Button
        android:id="@+id/subscriptions_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/starred_url_button"
        app:layout_constraintStart_toEndOf="@+id/subscriptions_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <TextView
        android:id="@+id/organizations_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="ORGANIZATIONS_URL"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/organizations_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/organizations_url_button"
        app:layout_constraintEnd_toStartOf="@+id/organizations_url_button"
        app:layout_constraintHorizontal_weight="3"

        />
    <Button
        android:id="@+id/organizations_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/organizations_url"
        app:layout_constraintTop_toBottomOf="@+id/subscriptions_url_button"
        app:layout_constraintStart_toEndOf="@+id/organizations_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <TextView
        android:id="@+id/repos_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/repos_url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/repos_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/repos_url_button"
        app:layout_constraintEnd_toStartOf="@+id/repos_url_button"
        app:layout_constraintHorizontal_weight="3"

        />
    <Button
        android:id="@+id/repos_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/organizations_url_button"
        app:layout_constraintStart_toEndOf="@+id/repos_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <TextView
        android:id="@+id/events_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/events_url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/events_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/events_url_button"
        app:layout_constraintEnd_toStartOf="@+id/events_url_button"
        app:layout_constraintHorizontal_weight="3"

        />
    <Button
        android:id="@+id/events_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/repos_url_button"
        app:layout_constraintStart_toEndOf="@+id/events_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <TextView
        android:id="@+id/received_events_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/received_events_url"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/received_events_url_button"
        app:layout_constraintBottom_toBottomOf="@+id/received_events_url_button"
        app:layout_constraintEnd_toStartOf="@+id/received_events_url_button"
        app:layout_constraintHorizontal_weight="3"

        />
    <Button
        android:id="@+id/received_events_url_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/events_url_button"
        app:layout_constraintStart_toEndOf="@+id/received_events_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        />

    <View
        android:id="@+id/belowline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDark"
        ></View>
</androidx.constraintlayout.widget.ConstraintLayout>